--- a/modul8_3.ipynb
+++ b/modul8_3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7a80402",
+   "id": "d82a0476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cc5585de",
+   "id": "a4be5377",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a9700a97",
+   "id": "62d75e14",
    "metadata": {},
    "outputs": [
     {
@@ -268,16 +268,15 @@
    ],
    "source": [
     "#2\n",
-    "df.pivot_table(index='race', columns='signs_of_mental_illness', values='id', aggfunc='count').fillna(0)"
+    "df_mental_illness = df.pivot_table(index='race', columns='signs_of_mental_illness', values='id', aggfunc='count').fillna(0)\n",
+    "df_mental_illness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "9ea5cd35",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 12,
+   "id": "5d2a8d2a",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -294,9 +293,10 @@
     "    mentally_ill = row['signs_of_mental_illness'].sum()\n",
     "    return (mentally_ill / total) * 100\n",
     "\n",
+    "\n",
     "race_mental_illness_percentage = df.groupby('race').apply(calculate_mental_illness_percentage)\n",
     "\n",
-    "df['mental_illness_percentage'] = np.around(df['race'].map(race_mental_illness_percentage),1).fillna(0)\n",
+    "df_mental_illness['mental_illness_percentage'] = np.around(df_mental_illness.index.map(race_mental_illness_percentage), 1).fillna(0)\n",
     "\n",
     "most_mental_illness_race = race_mental_illness_percentage.idxmax()\n",
     "print(f\"Największy odsetek oznak choroby psychicznej jest w grupie rasy: {most_mental_illness_race}\")"
@@ -304,8 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0729a92f",
+   "execution_count": 13,
+   "id": "3aadb0ec",
    "metadata": {},
    "outputs": [
     {
@@ -328,284 +328,83 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>manner_of_death</th>\n",
-       "      <th>armed</th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>race</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state</th>\n",
        "      <th>signs_of_mental_illness</th>\n",
-       "      <th>threat_level</th>\n",
-       "      <th>flee</th>\n",
-       "      <th>body_camera</th>\n",
+       "      <th>False</th>\n",
+       "      <th>True</th>\n",
        "      <th>mental_illness_percentage</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>race</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Tim Elliot</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>A</td>\n",
-       "      <td>Shelton</td>\n",
-       "      <td>WA</td>\n",
-       "      <td>True</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
+       "      <th>A</th>\n",
+       "      <td>69</td>\n",
+       "      <td>24</td>\n",
        "      <td>25.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Lewis Lee Lembke</td>\n",
-       "      <td>2015-01-02</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>W</td>\n",
-       "      <td>Aloha</td>\n",
-       "      <td>OR</td>\n",
-       "      <td>False</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
-       "      <td>28.8</td>\n",
+       "      <th>B</th>\n",
+       "      <td>1109</td>\n",
+       "      <td>183</td>\n",
+       "      <td>14.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5</td>\n",
-       "      <td>John Paul Quintero</td>\n",
-       "      <td>2015-01-03</td>\n",
-       "      <td>shot and Tasered</td>\n",
-       "      <td>unarmed</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>H</td>\n",
-       "      <td>Wichita</td>\n",
-       "      <td>KS</td>\n",
-       "      <td>False</td>\n",
-       "      <td>other</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
+       "      <th>H</th>\n",
+       "      <td>741</td>\n",
+       "      <td>157</td>\n",
        "      <td>17.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Matthew Hoffman</td>\n",
-       "      <td>2015-01-04</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>toy weapon</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>W</td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>True</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
+       "      <th>N</th>\n",
+       "      <td>62</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>O</th>\n",
+       "      <td>36</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>W</th>\n",
+       "      <td>1754</td>\n",
+       "      <td>709</td>\n",
        "      <td>28.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Michael Rodriguez</td>\n",
-       "      <td>2015-01-04</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>nail gun</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>H</td>\n",
-       "      <td>Evans</td>\n",
-       "      <td>CO</td>\n",
-       "      <td>False</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
-       "      <td>17.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5411</th>\n",
-       "      <td>5921</td>\n",
-       "      <td>William Slyter</td>\n",
-       "      <td>2020-06-13</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>W</td>\n",
-       "      <td>Kansas City</td>\n",
-       "      <td>MO</td>\n",
-       "      <td>False</td>\n",
-       "      <td>other</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>False</td>\n",
-       "      <td>28.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5412</th>\n",
-       "      <td>5922</td>\n",
-       "      <td>TK TK</td>\n",
-       "      <td>2020-06-13</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>undetermined</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>San Bernardino</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>False</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5413</th>\n",
-       "      <td>5924</td>\n",
-       "      <td>Nicholas Hirsh</td>\n",
-       "      <td>2020-06-15</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>W</td>\n",
-       "      <td>Lawrence</td>\n",
-       "      <td>KS</td>\n",
-       "      <td>False</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Car</td>\n",
-       "      <td>False</td>\n",
-       "      <td>28.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5414</th>\n",
-       "      <td>5926</td>\n",
-       "      <td>TK TK</td>\n",
-       "      <td>2020-06-16</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Beach Park</td>\n",
-       "      <td>IL</td>\n",
-       "      <td>False</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5415</th>\n",
-       "      <td>5927</td>\n",
-       "      <td>TK TK</td>\n",
-       "      <td>2020-06-16</td>\n",
-       "      <td>shot</td>\n",
-       "      <td>gun</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Phoenix</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>False</td>\n",
-       "      <td>attack</td>\n",
-       "      <td>Not fleeing</td>\n",
-       "      <td>False</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5416 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id                name        date   manner_of_death         armed  \\\n",
-       "0        3          Tim Elliot  2015-01-02              shot           gun   \n",
-       "1        4    Lewis Lee Lembke  2015-01-02              shot           gun   \n",
-       "2        5  John Paul Quintero  2015-01-03  shot and Tasered       unarmed   \n",
-       "3        8     Matthew Hoffman  2015-01-04              shot    toy weapon   \n",
-       "4        9   Michael Rodriguez  2015-01-04              shot      nail gun   \n",
-       "...    ...                 ...         ...               ...           ...   \n",
-       "5411  5921      William Slyter  2020-06-13              shot           gun   \n",
-       "5412  5922               TK TK  2020-06-13              shot  undetermined   \n",
-       "5413  5924      Nicholas Hirsh  2020-06-15              shot           gun   \n",
-       "5414  5926               TK TK  2020-06-16              shot           gun   \n",
-       "5415  5927               TK TK  2020-06-16              shot           gun   \n",
-       "\n",
-       "       age gender race            city state signs_of_mental_illness  \\\n",
-       "0     53.0      M    A         Shelton    WA                    True   \n",
-       "1     47.0      M    W           Aloha    OR                   False   \n",
-       "2     23.0      M    H         Wichita    KS                   False   \n",
-       "3     32.0      M    W   San Francisco    CA                    True   \n",
-       "4     39.0      M    H           Evans    CO                   False   \n",
-       "...    ...    ...  ...             ...   ...                     ...   \n",
-       "5411  22.0      M    W     Kansas City    MO                   False   \n",
-       "5412   NaN      M  NaN  San Bernardino    CA                   False   \n",
-       "5413  31.0      M    W        Lawrence    KS                   False   \n",
-       "5414  24.0      M  NaN      Beach Park    IL                   False   \n",
-       "5415  27.0      M  NaN         Phoenix    AZ                   False   \n",
-       "\n",
-       "     threat_level         flee body_camera  mental_illness_percentage  \n",
-       "0          attack  Not fleeing       False                       25.8  \n",
-       "1          attack  Not fleeing       False                       28.8  \n",
-       "2           other  Not fleeing       False                       17.5  \n",
-       "3          attack  Not fleeing       False                       28.8  \n",
-       "4          attack  Not fleeing       False                       17.5  \n",
-       "...           ...          ...         ...                        ...  \n",
-       "5411        other        Other       False                       28.8  \n",
-       "5412       attack  Not fleeing       False                        0.0  \n",
-       "5413       attack          Car       False                       28.8  \n",
-       "5414       attack  Not fleeing       False                        0.0  \n",
-       "5415       attack  Not fleeing       False                        0.0  \n",
-       "\n",
-       "[5416 rows x 15 columns]"
+       "signs_of_mental_illness  False  True  mental_illness_percentage\n",
+       "race                                                           \n",
+       "A                           69    24                       25.8\n",
+       "B                         1109   183                       14.2\n",
+       "H                          741   157                       17.5\n",
+       "N                           62    14                       18.4\n",
+       "O                           36    11                       23.4\n",
+       "W                         1754   709                       28.8"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "df_mental_illness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "b8791b3b",
+   "execution_count": 14,
+   "id": "2ac1bc42",
    "metadata": {},
    "outputs": [
     {
@@ -622,13 +421,11 @@
    "source": [
     "#4\n",
     "df['date'] = pd.to_datetime(df['date'])\n",
-    "\n",
     "df['day_of_week'] = df['date'].dt.day_name()\n",
     "\n",
     "interventions_by_day = df['day_of_week'].value_counts().reindex(\n",
     "    ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday'], fill_value=0\n",
     ")\n",
-    "\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "interventions_by_day.plot(kind='bar', color='blue')\n",
@@ -642,8 +439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "725fc504",
+   "execution_count": 15,
+   "id": "c530d089",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +992,7 @@
        "52             0.02  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
