--- a/modul8_3.ipynb
+++ b/modul8_3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d82a0476",
+   "id": "0d88c559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a4be5377",
+   "id": "630b2f85",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "62d75e14",
+   "id": "70372b95",
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "5d2a8d2a",
+   "execution_count": 4,
+   "id": "4b04e217",
    "metadata": {},
    "outputs": [
     {
@@ -288,15 +288,9 @@
    ],
    "source": [
     "#3\n",
-    "def calculate_mental_illness_percentage(row):\n",
-    "    total = len(row)\n",
-    "    mentally_ill = row['signs_of_mental_illness'].sum()\n",
-    "    return (mentally_ill / total) * 100\n",
+    "race_mental_illness_percentage = (df_mental_illness[True] / df_mental_illness.sum(axis=1) * 100)\n",
     "\n",
-    "\n",
-    "race_mental_illness_percentage = df.groupby('race').apply(calculate_mental_illness_percentage)\n",
-    "\n",
-    "df_mental_illness['mental_illness_percentage'] = np.around(df_mental_illness.index.map(race_mental_illness_percentage), 1).fillna(0)\n",
+    "df_mental_illness['mental_illness_percentage'] = np.around(race_mental_illness_percentage,2)\n",
     "\n",
     "most_mental_illness_race = race_mental_illness_percentage.idxmax()\n",
     "print(f\"Największy odsetek oznak choroby psychicznej jest w grupie rasy: {most_mental_illness_race}\")"
@@ -304,8 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3aadb0ec",
+   "execution_count": 5,
+   "id": "f93c6717",
    "metadata": {},
    "outputs": [
     {
@@ -345,37 +339,37 @@
        "      <th>A</th>\n",
        "      <td>69</td>\n",
        "      <td>24</td>\n",
-       "      <td>25.8</td>\n",
+       "      <td>25.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>B</th>\n",
        "      <td>1109</td>\n",
        "      <td>183</td>\n",
-       "      <td>14.2</td>\n",
+       "      <td>14.16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>H</th>\n",
        "      <td>741</td>\n",
        "      <td>157</td>\n",
-       "      <td>17.5</td>\n",
+       "      <td>17.48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>N</th>\n",
        "      <td>62</td>\n",
        "      <td>14</td>\n",
-       "      <td>18.4</td>\n",
+       "      <td>18.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>O</th>\n",
        "      <td>36</td>\n",
        "      <td>11</td>\n",
-       "      <td>23.4</td>\n",
+       "      <td>23.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>W</th>\n",
        "      <td>1754</td>\n",
        "      <td>709</td>\n",
-       "      <td>28.8</td>\n",
+       "      <td>28.79</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -384,15 +378,15 @@
       "text/plain": [
        "signs_of_mental_illness  False  True  mental_illness_percentage\n",
        "race                                                           \n",
-       "A                           69    24                       25.8\n",
-       "B                         1109   183                       14.2\n",
-       "H                          741   157                       17.5\n",
-       "N                           62    14                       18.4\n",
-       "O                           36    11                       23.4\n",
-       "W                         1754   709                       28.8"
+       "A                           69    24                      25.81\n",
+       "B                         1109   183                      14.16\n",
+       "H                          741   157                      17.48\n",
+       "N                           62    14                      18.42\n",
+       "O                           36    11                      23.40\n",
+       "W                         1754   709                      28.79"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,8 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "2ac1bc42",
+   "execution_count": 6,
+   "id": "dd4ab68d",
    "metadata": {},
    "outputs": [
     {
@@ -439,8 +433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "c530d089",
+   "execution_count": 7,
+   "id": "d7ea8307",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +986,7 @@
        "52             0.02  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
