--- a/modul8_3.ipynb
+++ b/modul8_3.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0d88c559",
+   "id": "676c3c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "630b2f85",
+   "id": "d695f99d",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "70372b95",
+   "id": "31f42ad0",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4b04e217",
+   "id": "a4148491",
    "metadata": {},
    "outputs": [
     {
@@ -288,18 +288,17 @@
    ],
    "source": [
     "#3\n",
-    "race_mental_illness_percentage = (df_mental_illness[True] / df_mental_illness.sum(axis=1) * 100)\n",
+    "df_mental_illness['mental_illness_percentage'] = np.around(df_mental_illness.apply(lambda row: (row[True] / row.sum()) * 100, axis=1),2)\n",
     "\n",
-    "df_mental_illness['mental_illness_percentage'] = np.around(race_mental_illness_percentage,2)\n",
+    "most_mental_illness_race = df_mental_illness['mental_illness_percentage'].idxmax()\n",
     "\n",
-    "most_mental_illness_race = race_mental_illness_percentage.idxmax()\n",
     "print(f\"Największy odsetek oznak choroby psychicznej jest w grupie rasy: {most_mental_illness_race}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f93c6717",
+   "id": "60089c3e",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dd4ab68d",
+   "id": "871bdb4d",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d7ea8307",
+   "id": "11820d6a",
    "metadata": {},
    "outputs": [
     {
